<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mindbyromanzanoni.viewModel.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/avenir_bold_black_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_16ssp"
                    android:text="@string/verification_Code" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmailDec"
                    style="@style/avenir_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/verification_Code_sent" />

                <com.chaos.view.PinView
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:inputType="number"
                    android:itemBackground="@drawable/custum_pinview_bg"
                    android:padding="@dimen/_4sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:cursorColor="@color/textview_color"
                    app:cursorWidth="2dp"
                    app:itemCount="4"
                    app:itemHeight="@dimen/_50sdp"
                    app:itemRadius="@dimen/_10sdp"
                    app:itemSpacing="@dimen/_18sdp"
                    app:itemWidth="@dimen/_51sdp"
                    app:lineColor="@android:color/transparent"
                    app:lineWidth="@dimen/_1sdp"
                    app:viewType="rectangle" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTiming"
                    style="@style/avenir_bold_text_style"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/time_set" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVerify"
                    style="@style/button_style"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/Verify" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/resendOtp"
                        style="@style/avenir_regular_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/dont_receive_code"
                        android:textColor="@color/textview_color"
                        android:textSize="@dimen/_12ssp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvResendOtp"
                        style="@style/avenir_medium_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/resend_code"
                        android:textColor="@color/textview_color"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>