<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mindbyromanzanoni.viewModel.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/avenir_bold_black_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:text="@string/Welcome_to_Mind"
                    android:textSize="@dimen/_16ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/avenir_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/enter_email_password" />


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/avenir_bold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/email_address" />

                <RelativeLayout
                    android:id="@+id/rlEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/slight_round_corner">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        style="@style/avenir_edit_text_style"
                        android:layout_width="match_parent"
                        android:text="@={viewModel.email}"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:inputType="textEmailAddress"
                        android:layout_toStartOf="@id/ivTick"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:gravity="center_vertical"
                        tools:hint="@string/example_email" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivTick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tick_circle"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_9sdp"/>
                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/avenir_bold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/password" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/slight_round_corner">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/InputTextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/avenir_edit_text_style"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            tools:hint="@string/password"
                            android:drawablePadding="@dimen/_7sdp"
                            android:drawableStart="@drawable/password"
                            android:inputType="textPassword"
                            android:text="@={viewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp">

                    <CheckBox
                        android:id="@+id/checkRememberMe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="0dp"
                        android:text="@string/remember_me"
                        app:buttonCompat="@drawable/custom_check_box_remember_selector"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvForgotPassword"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvForgotPassword"
                        style="@style/avenir_medium_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/light_mode_blue"
                        app:layout_constraintBottom_toBottomOf="@+id/checkRememberMe"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignIn"
                    style="@style/button_style"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/sign_in" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="#F3F3F3" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/avenir_regular_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:text="@string/or_signup_with"
                    android:textColor="@color/light_mode_grey"
                    android:textSize="@dimen/_12ssp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/google_bg"
                        android:layout_marginEnd="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/appCompatImageView13"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/facebook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/ivGoogle"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUp"
                    style="@style/avenir_bold_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/don_have_account"
                    android:textColor="@color/textview_color"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>