<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100sdp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvImage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_2sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_mind" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDuration"
                style="@style/avenir_regular_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="#99000000"
                android:layout_marginBottom="@dimen/_1sdp"
                android:gravity="start"
                android:padding="@dimen/_2sdp"
                android:layout_alignParentBottom="true"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toStartOf="@+id/tvViewPdf"
        android:layout_toEndOf="@+id/cvImage"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/avenir_bold_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/Self_Love"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            style="@style/avenir_regular_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/recover_from_burnout"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewPdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/avenir_regular_text_style"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:background="@drawable/app_color_round_bg"
        android:backgroundTint="#F1F9F9"
         android:paddingVertical="@dimen/_3sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:text="@string/view_pdf"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_8sdp" />

</RelativeLayout>
</layout>